[package]
name = "indexed_priority_queue"
description = "An indexed priority queue with index-based removals, restores and value updates."
version = "0.3.0"
edition = "2021"
authors = ["Julia Dijkstra <juliadijkstra97@gmail.com", "Jonathan Brouwer <jonathantbrouwer@gmail.com>"]
license = "MIT"
repository = "https://github.com/binary-banter/indexed_priority_queue"

[dev-dependencies]
ordered-float = "4.2.0"
